# =============================================================================
# Tests Module (Criterion-based tests)
# =============================================================================
# This module sets up the Criterion test framework and creates test executables
#
# Prerequisites:
#   - Libraries created (via Libraries.cmake)
#   - BUILD_CRITERION_TESTS option set (from Criterion.cmake)
#   - CRITERION_FOUND (required for BUILD_CRITERION_TESTS)
#   - Platform detection complete
#   - USE_MUSL known
#
# Outputs:
#   - All test_* executable targets (Criterion-based)
#   - tests, test_debug, test_release, test_all custom targets
#   - tests-timer-start, tests-timer-end (build timing targets)
#   - tests-criterion-build or tests-lib-build (internal build targets)
#
# Note: Library runtime tests (test-static-lib, test-shared-lib) are handled
# by TestLibs.cmake and only require BUILD_TESTS, not Criterion.
#
# Build Timing:
#   When BUILD_TESTS is enabled, the module creates timer targets that measure
#   how long it takes to build all test executables. The timing includes:
#   - All Criterion test executables (when available)
#   - Library runtime tests (test-static-lib, test-shared-lib)
#   - Future defer tests (prepared for in this infrastructure)
# =============================================================================

# Enable CTest if any tests are being built (Criterion or lib runtime)
if(BUILD_TESTS)
    enable_testing()

    # Override the autogenerated "test" target with a message
    add_custom_target(test
        COMMAND ${CMAKE_COMMAND} -E echo "DON'T RUN THIS CLAUDE, RUN INDIVIDUAL TESTS"
    )
endif()

# =============================================================================
# Criterion Test Configuration
# =============================================================================
# Configure Criterion-specific test options based on build type.
# Coverage builds are slower due to instrumentation, so we use longer timeouts.
# XML output is generated for coverage builds to capture detailed test results.

# Detect coverage build via ASCIICHAT_ENABLE_COVERAGE option
set(IS_COVERAGE_BUILD OFF)
if(ASCIICHAT_ENABLE_COVERAGE)
    set(IS_COVERAGE_BUILD ON)
endif()

# Configure timeouts based on build type
if(IS_COVERAGE_BUILD)
    set(CRITERION_TIMEOUT 60)      # Criterion's internal timeout per test case
    set(CTEST_TEST_TIMEOUT 120)    # CTest's overall timeout per test executable
    set(CRITERION_JOBS 1)          # Disable internal parallelism for coverage accuracy
else()
    set(CRITERION_TIMEOUT 25)      # Default timeout
    set(CTEST_TEST_TIMEOUT 45)     # Default ctest timeout
    set(CRITERION_JOBS ${CPU_CORES})  # Use all available CPU cores for parallel test execution
endif()

# XML output directory for Criterion test results
set(CRITERION_XML_DIR "${CMAKE_BINARY_DIR}/Testing/criterion-xml")
file(MAKE_DIRECTORY ${CRITERION_XML_DIR})

# =============================================================================
# Test Build Timing
# =============================================================================
# Create timer start target for all tests (Criterion, library, and future defer tests)
# This target is created unconditionally so other modules can depend on it
if(BUILD_TESTS AND NOT TARGET tests-timer-start)
    add_custom_target(tests-timer-start
        COMMAND ${CMAKE_COMMAND}
        -DACTION=start
        -DTARGET_NAME=tests
        -DSOURCE_DIR=${CMAKE_SOURCE_DIR}
        -DCMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}
        -P ${CMAKE_SOURCE_DIR}/cmake/utils/Timer.cmake
        COMMENT "Starting test build timing"
        VERBATIM
    )
endif()

# Collect all test targets for timing (populated by Criterion tests, lib tests, etc.)
set(ALL_TIMED_TEST_TARGETS "" CACHE INTERNAL "All test targets for timing")

# Criterion test framework setup
if(BUILD_CRITERION_TESTS AND CRITERION_FOUND)
    # Build test LDFLAGS systematically (matches Makefile complex setup)
    set(TEST_LDFLAGS ${CRITERION_LIBRARIES})
    # Criterion requires libffi for theories support
    list(APPEND TEST_LDFLAGS ffi)

    if(PLATFORM_LINUX)
        # Add Linux-specific test dependencies (matching Makefile order)
        if(PROTOBUF_C_FOUND)
            list(APPEND TEST_LDFLAGS ${PROTOBUF_C_LIBRARIES})
        elseif(PROTOBUF_C_LIBRARIES)
            list(APPEND TEST_LDFLAGS ${PROTOBUF_C_LIBRARIES})
        else()
            # Protobuf-C is optional - only add if library exists
            find_library(PROTOBUF_C_LIB protobuf-c)
            if(PROTOBUF_C_LIB)
                list(APPEND TEST_LDFLAGS protobuf-c)
            endif()
        endif()

        if(NANOPB_FOUND)
            list(APPEND TEST_LDFLAGS ${NANOPB_LIBRARIES})
        elseif(NANOPB_LIBRARIES)
            list(APPEND TEST_LDFLAGS ${NANOPB_LIBRARIES})
        elseif(CMAKE_LIBRARY_ARCHITECTURE AND EXISTS /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE}/libprotobuf-nanopb.a)
            list(APPEND TEST_LDFLAGS /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE}/libprotobuf-nanopb.a)
        endif()

        # Boxfort (subprocess isolation) - skip for musl builds (requires glibc)
        if(NOT USE_MUSL)
            if(BOXFORT_FOUND)
                list(APPEND TEST_LDFLAGS ${BOXFORT_LIBRARIES})
            elseif(BOXFORT_LIBRARIES)
                list(APPEND TEST_LDFLAGS ${BOXFORT_LIBRARIES})
            else()
                # Boxfort is optional - only add if library exists
                find_library(BOXFORT_LIB boxfort)
                if(BOXFORT_LIB)
                    list(APPEND TEST_LDFLAGS boxfort)
                endif()
            endif()
        endif()

        # Optional dependencies (skip for musl static builds to avoid dynamic library issues)
        if(NOT USE_MUSL)
            if(NANOMSG_FOUND)
                list(APPEND TEST_LDFLAGS ${NANOMSG_LIBRARIES})
            endif()
            if(LIBGIT2_FOUND)
                list(APPEND TEST_LDFLAGS ${LIBGIT2_LIBRARIES})

                # libgit2 requires OpenSSL and libssh2 when statically linked
                find_package(OpenSSL)
                if(OpenSSL_FOUND)
                    list(APPEND TEST_LDFLAGS OpenSSL::SSL OpenSSL::Crypto)
                else()
                    # Fallback to direct library names
                    list(APPEND TEST_LDFLAGS ssl crypto)
                endif()

                # Additional libgit2 dependencies (required for static linking)
                # These must be linked unconditionally when using static libgit2
                # Check if each library exists before adding

                # On Linux, provide search hints for standard locations
                if(PLATFORM_LINUX)
                    if(CMAKE_LIBRARY_ARCHITECTURE)
                        find_library(SSH2_LIB ssh2 HINTS /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE} /usr/lib /lib)
                        find_library(PCRE2_LIB pcre2-8 HINTS /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE} /usr/lib /lib)
                    else()
                        find_library(SSH2_LIB ssh2 HINTS /usr/lib /lib)
                        find_library(PCRE2_LIB pcre2-8 HINTS /usr/lib /lib)
                    endif()
                else()
                    find_library(SSH2_LIB ssh2)
                    find_library(PCRE2_LIB pcre2-8)
                endif()

                # Only link libgit2 dependencies if they exist (make them optional)
                if(SSH2_LIB)
                    list(APPEND TEST_LDFLAGS ssh2)
                    message(STATUS "Added libssh2 for tests")
                else()
                    message(WARNING "libssh2 not found - some git features may not work")
                endif()

                if(PCRE2_LIB)
                    list(APPEND TEST_LDFLAGS pcre2-8)
                    message(STATUS "Added pcre2-8 for tests")
                else()
                    message(WARNING "pcre2-8 not found - some git features may not work")
                endif()

                # libgit2 also requires zlib for compression
                if(CMAKE_LIBRARY_ARCHITECTURE)
                    find_library(ZLIB_LIB z HINTS /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE} /usr/lib /lib)
                else()
                    find_library(ZLIB_LIB z HINTS /usr/lib /lib)
                endif()
                if(ZLIB_LIB)
                    list(APPEND TEST_LDFLAGS z)
                    message(STATUS "Added zlib for tests (libgit2 dependency)")
                else()
                    message(WARNING "zlib not found - libgit2 compression may not work")
                endif()

                if(NOT SSH2_LIB AND NOT PCRE2_LIB)
                    message(WARNING "No libgit2 dependencies found - git features will be disabled")
                endif()
            endif() # LIBGIT2_FOUND
        endif() # NOT USE_MUSL

        # GSSAPI/Kerberos support (skip for musl to avoid dynamic library issues)
        if(NOT USE_MUSL)
            if(KRB5_GSSAPI_FOUND)
                list(APPEND TEST_LDFLAGS ${KRB5_GSSAPI_LIBRARIES})
            elseif(LIBSSH2_FOUND)
                list(APPEND TEST_LDFLAGS ${LIBSSH2_LIBRARIES})
            else()
                list(APPEND TEST_LDFLAGS gssapi_krb5 krb5 k5crypto com_err)
            endif()
        endif()

        # Additional system libraries (matches Makefile)
        # Make these optional - only link if available
        # Note: ssh2 and and pcre2-8 are already handled above with libgit2
        foreach(lib dl resolv)
            find_library(${lib}_LIB ${lib})
            if(${lib}_LIB)
                list(APPEND TEST_LDFLAGS ${lib})
            endif()
        endforeach()

    elseif(PLATFORM_DARWIN)
        # macOS test linking - must add library directories from pkg-config
        # pkg-config sets CRITERION_LIBRARY_DIRS but CMake doesn't automatically use it
        # This is especially important when using Homebrew LLVM which doesn't search
        # /opt/homebrew/lib by default
        if(CRITERION_LIBRARY_DIRS)
            foreach(dir ${CRITERION_LIBRARY_DIRS})
                list(APPEND TEST_LDFLAGS "-L${dir}")
            endforeach()
        else()
            # Fallback for Homebrew (Criterion is keg-only, so provide both opt prefixes)
            if(HOMEBREW_PREFIX)
                list(APPEND TEST_LDFLAGS
                    "-L${HOMEBREW_PREFIX}/opt/criterion/lib"
                    "-L${HOMEBREW_PREFIX}/lib"
                )
            endif()
            list(APPEND TEST_LDFLAGS "-L/usr/local/lib")
        endif()
        # Note: CRITERION_LIBRARIES is already added to TEST_LDFLAGS on line 87,
        # so we only add the library search directories here
    endif()

    # Use mimalloc include directories from Mimalloc.cmake
    set(_ascii_tests_mimalloc_include "${MIMALLOC_INCLUDE_DIRS}")

    # Find test files (excluding problematic ones, matches Makefile)
    file(GLOB_RECURSE TEST_SRCS_ALL ${CMAKE_CURRENT_SOURCE_DIR}/unit/*.c ${CMAKE_CURRENT_SOURCE_DIR}/integration/*.c ${CMAKE_CURRENT_SOURCE_DIR}/performance/*.c)
    # GLOB_RECURSE returns absolute paths, so TEST_EXCLUDES must also be absolute
    set(TEST_EXCLUDES
        ${CMAKE_CURRENT_SOURCE_DIR}/integration/server_multiclient_test.c
        ${CMAKE_CURRENT_SOURCE_DIR}/integration/video_pipeline_test.c
    )
    # Exclude query tests if query runtime library not available
    if(NOT TARGET ascii-query-runtime)
        list(APPEND TEST_EXCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/unit/tooling/query_test.c)
    endif()

    set(TEST_SRCS)
    foreach(test_src IN LISTS TEST_SRCS_ALL)
        list(FIND TEST_EXCLUDES ${test_src} IS_EXCLUDED)
        if(IS_EXCLUDED EQUAL -1)
            list(APPEND TEST_SRCS ${test_src})
        endif()
    endforeach()

    # Create test executables (matches Makefile naming convention)
    set(ALL_TEST_TARGETS)
    foreach(test_src ${TEST_SRCS})
        # Transform test file paths to executable names with flattened structure
        # tests/unit/common_test.c -> test_unit_common
        # tests/integration/crypto_network_test.c -> test_integration_crypto_network
        # Determine the top-level test category (unit/integration/performance)
        file(RELATIVE_PATH test_rel ${CMAKE_CURRENT_SOURCE_DIR} ${test_src})
        string(REPLACE "\\" "/" test_rel ${test_rel})
        string(REGEX MATCH "^[^/]+" test_category ${test_rel})
        if(NOT test_category)
            message(FATAL_ERROR "Failed to determine test category for ${test_src}")
        endif()

        # Create a flattened executable name that preserves subdirectory information
        string(REPLACE ".c" "" test_rel_noext ${test_rel})
        string(REPLACE "/" "_" test_rel_flat ${test_rel_noext})
        string(REGEX REPLACE "_test$" "" test_rel_flat ${test_rel_flat})
        set(test_exe_name "test_${test_rel_flat}")
        list(APPEND ALL_TEST_TARGETS ${test_exe_name})

        # Add test executable with test utilities
        # - common.c: Provides shared test utilities (test_get_binary_path, etc.)
        # - globals.c: Provides global symbols (g_should_exit) needed by lib code
        # - logging.c: Provides test-specific logging utilities (stdout/stderr redirection)
        add_executable(${test_exe_name} ${test_src} ${CMAKE_SOURCE_DIR}/lib/tests/common.c ${CMAKE_SOURCE_DIR}/lib/tests/globals.c ${CMAKE_SOURCE_DIR}/lib/tests/logging.c)

        # Configure BUILD_RPATH to prefer locally built libraries over system-installed ones
        # This ensures tests use the correct libasciichat from build/lib instead of /usr/local/lib
        # Priority: local build lib > LLVM libs > system libs
        if(APPLE)
            set_target_properties(${test_exe_name} PROPERTIES
                BUILD_RPATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY};${CMAKE_BUILD_RPATH};${HOMEBREW_PREFIX}/lib;/usr/local/lib"
                MACOSX_RPATH ON
            )
        else()
            set_target_properties(${test_exe_name} PROPERTIES
                BUILD_RPATH "$<TARGET_FILE_DIR:ascii-chat-shared>;${CMAKE_BUILD_RPATH}"
            )
        endif()

        # Add timer dependency so timing starts before first test compiles
        if(TARGET tests-timer-start)
            add_dependencies(${test_exe_name} tests-timer-start)
        endif()

        # Disable precompiled headers for test targets to avoid conflicts with Criterion macros
        set_target_properties(${test_exe_name} PROPERTIES SKIP_PRECOMPILE_HEADERS ON)

        # Add Criterion and project include directories
        target_include_directories(${test_exe_name} PRIVATE
            ${CRITERION_INCLUDE_DIRS}
            ${_ascii_tests_mimalloc_include}
            ${LIBWEBSOCKETS_INCLUDE_DIRS}
        )

        # Define CRITERION_TEST for test environment detection
        target_compile_definitions(${test_exe_name} PRIVATE CRITERION_TEST=1)

        # For musl builds, disable subprocess isolation (no forking)
        if(USE_MUSL)
            target_compile_definitions(${test_exe_name} PRIVATE CRITERION_NO_EARLY_EXIT=1)
        endif()

        # Link test dependencies via shared library + external dependencies
        # Ensure shared library is built first
        add_dependencies(${test_exe_name} ascii-chat-shared)

        # Link against shared library which contains all code
        target_link_libraries(${test_exe_name}
            ascii-chat-shared
            ${TEST_LDFLAGS}
        )

        # External dependencies needed because shared library has them as undefined symbols
        # (normal for dylibs - symbols resolved at runtime)
        target_link_libraries(${test_exe_name}
            ${LIBSODIUM_LIBRARIES}
            ${ZSTD_LIBRARIES}
            ${OPUS_LIBRARIES}
            ${SQLITE3_LIBRARIES}
            ${LIBWEBSOCKETS_LIBRARIES}
            z  # zlib needed for libwebsockets compression support
            libdatachannel
            OpenSSL::Crypto
            -lc++  # C++ stdlib needed for libdatachannel
        )
        if(APPLE)
            target_link_libraries(${test_exe_name}
                ${PORTAUDIO_LIBRARIES}
                ${COREAUDIO_FRAMEWORK}
                ${AUDIOUNIT_FRAMEWORK}
                ${AUDIOTOOLBOX_FRAMEWORK}
                ${CORESERVICES_FRAMEWORK}
            )
        elseif(PLATFORM_LINUX AND JACK_LIB)
            target_link_libraries(${test_exe_name}
                ${PORTAUDIO_LIBRARIES}
                ${JACK_LIB}
            )
        else()
            target_link_libraries(${test_exe_name} ${PORTAUDIO_LIBRARIES})
        endif()
        if(MINIUPNPC_FOUND)
            target_link_libraries(${test_exe_name} ${MINIUPNPC_LIBRARIES})
            if(NATPMP_LIBRARY)
                target_link_libraries(${test_exe_name} ${NATPMP_LIBRARY})
            endif()
        endif()
        if(BEARSSL_FOUND)
            target_link_libraries(${test_exe_name} ${BEARSSL_LIBRARIES})
        endif()

        # Add query runtime library if available
        if(TARGET ascii-query-runtime)
            target_link_libraries(${test_exe_name} ascii-query-runtime)
        endif()

        # For musl static builds, allow undefined boxfort references (they won't be called)
        if(USE_MUSL)
            target_link_options(${test_exe_name} PRIVATE
                -Wl,--allow-shlib-undefined
                -Wl,--unresolved-symbols=ignore-all
            )
            # Link Alpine libc++ for musl builds (function defined in Musl.cmake)
            link_alpine_libcxx(${test_exe_name})
        endif()

        # Use release objects for performance tests
        if(test_category STREQUAL "performance")
            target_compile_options(${test_exe_name} PRIVATE -O3 -DNDEBUG)
        endif()

        # Disable dead code elimination for test executables
        # Criterion uses __attribute__((constructor)) to register tests, which the linker
        # considers "unused" and removes with --gc-sections/-dead_strip. This causes all
        # tests to be stripped in Release builds, resulting in "Tested: 0" output.
        #
        # On macOS: We cannot use -Wl,-no_dead_strip to disable stripping, so we use
        # -Wl,-all_load on static libraries instead (via target_link_options below).
        # On Linux: Use --no-gc-sections to override the global --gc-sections flag.
        #
        # IMPORTANT: We must NOT replace LINK_OPTIONS entirely on macOS as that would
        # remove sanitizer link flags. Instead we add flags to counteract dead stripping.
        if(NOT WIN32)
            if(APPLE)
                # macOS: Add -all_load to prevent stripping constructor functions from static libs
                # The global -undefined dynamic_lookup flag handles undefined symbols from WebRTC
                # Keep -pie for ASLR security. Don't clear other link options (sanitizers!)
                target_link_options(${test_exe_name} PRIVATE
                    -Wl,-all_load
                )
            else()
                # Linux: Use --no-gc-sections to override the global --gc-sections flag
                target_link_options(${test_exe_name} PRIVATE
                    -Wl,--no-gc-sections
                )
            endif()
        endif()

        # Disable IPO/LTO for test executables
        # LTO can see that Criterion's __attribute__((constructor)) test registration
        # functions are never called and removes them as dead code. This happens even
        # with --no-gc-sections because LTO operates at a different (interprocedural)
        # level than section-based dead stripping. Without this, Release builds show
        # "Synthesis: Tested: 0" because all test functions are stripped.
        set_target_properties(${test_exe_name} PROPERTIES
            INTERPROCEDURAL_OPTIMIZATION OFF
            INTERPROCEDURAL_OPTIMIZATION_RELEASE OFF
            INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO OFF
        )

        # Build Criterion command-line arguments
        set(_criterion_args
            --jobs ${CRITERION_JOBS}
            --timeout ${CRITERION_TIMEOUT}
            --color=always
            --short-filename
        )

        # Add XML output for all builds (needed for CI test reporting)
        list(APPEND _criterion_args --xml=${CRITERION_XML_DIR}/${test_exe_name}.xml)

        # Add to CTest with Criterion flags
        add_test(NAME ${test_exe_name}
            COMMAND ${test_exe_name} ${_criterion_args}
        )

        # Set test properties
        set_tests_properties(${test_exe_name} PROPERTIES
            ENVIRONMENT "TESTING=1;CRITERION_TEST=1"
            TIMEOUT ${CTEST_TEST_TIMEOUT}
            LABELS "${test_category}"
        )

        # Tests that spawn subprocesses (server/client) must run serially
        # to avoid port conflicts and resource contention
        if(test_exe_name MATCHES "main_integration")
            set_tests_properties(${test_exe_name} PROPERTIES RUN_SERIAL TRUE)
        endif()
    endforeach()

    # Update timed test targets list with Criterion tests
    set(ALL_TIMED_TEST_TARGETS ${ALL_TEST_TARGETS} CACHE INTERNAL "All test targets for timing")

    # Internal target to build all Criterion tests (without timing)
    add_custom_target(tests-criterion-build
        DEPENDS ${ALL_TEST_TARGETS}
        COMMENT "Building Criterion test executables"
    )

    # Target to build all tests without running them (excluded from default build)
    # This is the main public target that includes timing
    # NOTE: Only available with --preset github (CI environment)
    # For local development, use individual test targets (test_debug, test_release, etc.)
    # Claude should NOT run the 'tests' target directly - run individual tests instead
    if(DEFINED ENV{GITHUB_CMAKE_BINARY_DIR})
        add_custom_target(tests
            COMMENT "Building all test executables"
        )

        # Timer end target runs after all tests are built
        if(TARGET tests-timer-start)
            add_custom_target(tests-timer-end
                COMMAND ${CMAKE_COMMAND}
                -DACTION=end
                -DTARGET_NAME=tests
                -DSOURCE_DIR=${CMAKE_SOURCE_DIR}
                -DCMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}
                -P ${CMAKE_SOURCE_DIR}/cmake/utils/Timer.cmake
                COMMENT "Finishing test build timing"
                VERBATIM
            )
            # Timer end depends on timer start and the actual test build
            add_dependencies(tests-timer-end tests-timer-start tests-criterion-build)
            # Main tests target depends on timer end (so timing is shown)
            add_dependencies(tests tests-timer-end)
        else()
            # No timer, just depend on the build target directly
            add_dependencies(tests tests-criterion-build)
        endif()
    else()
        # For non-GitHub presets, print a helpful message
        message(STATUS "Note: The 'tests' target is only available with --preset github")
        message(STATUS "For local development, use individual test targets like:")
        message(STATUS "  cmake --build build --target test_debug")
        message(STATUS "  cmake --build build --target test_release")
    endif()

    # Custom targets for different test modes (matches Makefile)
    # Use CPU_CORES from Init.cmake for automatic parallel job count
    add_custom_target(test_debug
        DEPENDS tests
        COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure --parallel ${CPU_CORES}
        COMMENT "Running tests in debug mode (${CPU_CORES} parallel jobs)"
    )

    add_custom_target(test_release
        DEPENDS tests
        COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure -C Release --parallel ${CPU_CORES}
        COMMENT "Running tests in release mode (${CPU_CORES} parallel jobs)"
    )

    # Overall test target
    add_custom_target(test_all
        DEPENDS tests
        COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure --parallel ${CPU_CORES}
        COMMENT "Running all tests (${CPU_CORES} parallel jobs)"
    )

    # Add library test targets to test_all so they're built when running ctest
    # These are defined in TestLibs.cmake but need to be added here after test_all exists
    # Also add them to the timed test targets and timer dependency chain
    if(TARGET test-static-lib)
        add_dependencies(test_all test-static-lib)
        add_dependencies(tests-criterion-build test-static-lib)
        if(TARGET tests-timer-start)
            add_dependencies(test-static-lib tests-timer-start)
        endif()
    endif()
    if(TARGET test-shared-lib)
        add_dependencies(test_all test-shared-lib)
        add_dependencies(tests-criterion-build test-shared-lib)
        if(TARGET tests-timer-start)
            add_dependencies(test-shared-lib tests-timer-start)
        endif()
    endif()

else()
    # Criterion tests not available, but lib runtime tests may still be available
    if(USE_MUSL AND BUILD_TESTS)
        message(STATUS "Criterion tests disabled: System Criterion requires glibc (boxfort dependency)")
        message(STATUS "  -> Library runtime tests still available via ctest")
    elseif(BUILD_TESTS AND NOT WIN32)
        message(STATUS "${Yellow}Criterion testing framework not found. Criterion tests will not be built.${ColorReset}")
        message(STATUS "  -> Library runtime tests still available via ctest")
    endif()

    # Even without Criterion, create tests target for library tests with timing
    if(BUILD_TESTS)
        # Create tests target that depends on lib tests with timing
        add_custom_target(tests-lib-build
            COMMENT "Building library test executables"
        )

        # Add library tests to the build target
        if(TARGET test-static-lib)
            add_dependencies(tests-lib-build test-static-lib)
            if(TARGET tests-timer-start)
                add_dependencies(test-static-lib tests-timer-start)
            endif()
        endif()
        if(TARGET test-shared-lib)
            add_dependencies(tests-lib-build test-shared-lib)
            if(TARGET tests-timer-start)
                add_dependencies(test-shared-lib tests-timer-start)
            endif()
        endif()

        # Create tests target with timing
        add_custom_target(tests
            COMMENT "Building all test executables"
        )

        if(TARGET tests-timer-start)
            add_custom_target(tests-timer-end
                COMMAND ${CMAKE_COMMAND}
                    -DACTION=end
                    -DTARGET_NAME=tests
                    -DSOURCE_DIR=${CMAKE_SOURCE_DIR}
                    -DCMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}
                    -P ${CMAKE_SOURCE_DIR}/cmake/utils/Timer.cmake
                COMMENT "Finishing test build timing"
                VERBATIM
            )
            add_dependencies(tests-timer-end tests-timer-start tests-lib-build)
            add_dependencies(tests tests-timer-end)
        else()
            add_dependencies(tests tests-lib-build)
        endif()

        # Test mode targets
        # Use CPU_CORES from Init.cmake for automatic parallel job count
        add_custom_target(test_all
            DEPENDS tests
            COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure --parallel ${CPU_CORES}
            COMMENT "Running all tests (${CPU_CORES} parallel jobs)"
        )
    endif()
endif()

# =============================================================================
# Standalone Tests (No Criterion Dependency)
# =============================================================================
# Library runtime tests (test-static-lib, test-shared-lib) are handled by
# TestLibs.cmake and only require BUILD_TESTS, not Criterion.
# Note: The defer runtime library was removed when we switched to direct code insertion.
# =============================================================================
# Test Library Executables
# =============================================================================
# Simple test programs to verify both static and shared libraries work correctly
# Both targets use the same source file but link against different libraries
#
# These tests use assert.h (not Criterion), so they only require BUILD_TESTS=ON
# and work on all platforms including Windows.
#
# Prerequisites:
#   - BUILD_TESTS option set
#   - Libraries created (via Libraries.cmake)
#
# Outputs:
#   - test-static-lib: Tests the static library (when available)
#   - test-shared-lib: Tests the shared library (when available)
# =============================================================================

# Use mimalloc include directories from Mimalloc.cmake
set(_asciichat_mimalloc_include "${MIMALLOC_INCLUDE_DIRS}")

# =============================================================================
# Test Static Library
# =============================================================================
# Only available when building STATIC libraries (not OBJECT libraries)
# On Windows, static libs are built in Release mode (OBJECT libs in Debug/Dev)
if(NOT BUILDING_OBJECT_LIBS)
    if(BUILD_TESTS)
        add_executable(test-static-lib ${CMAKE_SOURCE_DIR}/cmake/test/test_lib.c)
        set_target_properties(test-static-lib PROPERTIES LINKER_LANGUAGE CXX)
        set(TEST_STATIC_DEFAULT "built by default")
    else()
        add_executable(test-static-lib EXCLUDE_FROM_ALL ${CMAKE_SOURCE_DIR}/cmake/test/test_lib.c)
        set_target_properties(test-static-lib PROPERTIES LINKER_LANGUAGE CXX)
        set(TEST_STATIC_DEFAULT "explicit target only")
    endif()

    # Link against the static library (mimalloc is transitively linked)
    target_link_libraries(test-static-lib PRIVATE
        ascii-chat-static-lib
    )

    # Link panic runtime when panic instrumentation is enabled
    if(ASCIICHAT_BUILD_WITH_PANIC AND TARGET ascii-panic-runtime)
        target_link_libraries(test-static-lib PRIVATE ascii-panic-runtime)
    endif()

    # Add musl dependency ordering for proper build sequencing
    if(USE_MUSL)
        add_dependencies(test-static-lib portaudio-musl alsa-lib-musl libsodium-musl zstd-musl libexecinfo-musl opus-musl)
        # Link Alpine libc++ for musl builds (function defined in Musl.cmake)
        link_alpine_libcxx(test-static-lib)
    endif()

    # Include necessary headers
    target_include_directories(test-static-lib PRIVATE
        ${CMAKE_SOURCE_DIR}/lib
        ${CMAKE_SOURCE_DIR}/lib/platform
        ${CMAKE_BINARY_DIR}/generated
        ${_asciichat_mimalloc_include}
    )

    # Set output directory
    set_target_properties(test-static-lib PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )

    # Simple runtime check for the static library
    add_custom_target(run-test-static-lib
        COMMAND ${CMAKE_BINARY_DIR}/bin/test-static-lib
        DEPENDS test-static-lib
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
        COMMENT "Running test-static-lib to verify static library works"
        VERBATIM
    )

    # Register as ctest test (only when BUILD_TESTS is enabled)
    if(BUILD_TESTS)
        add_test(NAME static-lib-runtime
            COMMAND ${CMAKE_BINARY_DIR}/bin/test-static-lib)
    endif()

    message(STATUS "Added test-static-lib target to test libasciichat.a (${TEST_STATIC_DEFAULT})")
else()
    message(STATUS "Skipping test-static-lib (not available with OBJECT libraries)")
endif()

# =============================================================================
# Test Shared Library
# =============================================================================
# Available in all build types except musl static builds
# Musl builds use static-pie which cannot link against shared libraries
if(NOT USE_MUSL)
    if(BUILD_TESTS)
        add_executable(test-shared-lib ${CMAKE_SOURCE_DIR}/cmake/test/test_lib.c)
        set_target_properties(test-shared-lib PROPERTIES LINKER_LANGUAGE CXX)
        set(TEST_SHARED_DEFAULT "built by default")
    else()
        add_executable(test-shared-lib EXCLUDE_FROM_ALL ${CMAKE_SOURCE_DIR}/cmake/test/test_lib.c)
        set_target_properties(test-shared-lib PROPERTIES LINKER_LANGUAGE CXX)
        set(TEST_SHARED_DEFAULT "explicit target only")
    endif()

    # Link against the shared library (mimalloc is in the shared library)
    target_link_libraries(test-shared-lib PRIVATE
        ascii-chat-shared
    )

    # Include necessary headers
    target_include_directories(test-shared-lib PRIVATE
        ${CMAKE_SOURCE_DIR}/lib
        ${CMAKE_SOURCE_DIR}/lib/platform
        ${CMAKE_BINARY_DIR}/generated
        ${_asciichat_mimalloc_include}
    )

    # Set output directory
    set_target_properties(test-shared-lib PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )

    # Make sure shared library is built first
    add_dependencies(test-shared-lib ascii-chat-shared)

    message(STATUS "Added test-shared-lib target to test asciichat.dll/.so (${TEST_SHARED_DEFAULT})")

    # Add a custom test that runs test-shared-lib to verify it works
    add_custom_target(run-test-shared-lib
        COMMAND ${CMAKE_BINARY_DIR}/bin/test-shared-lib
        DEPENDS test-shared-lib
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
        COMMENT "Running test-shared-lib to verify shared library works"
        VERBATIM
    )

    # Register as ctest test (only when BUILD_TESTS is enabled)
    if(BUILD_TESTS)
        add_test(NAME shared-lib-runtime
            COMMAND ${CMAKE_BINARY_DIR}/bin/test-shared-lib)
    endif()
else()
    message(STATUS "Skipping test-shared-lib (not compatible with musl static builds)")
endif()

