# =============================================================================
# Defer Tool Alias
# =============================================================================
# Provides an alias to the defer() transformation tool.
# The actual tool is built from source at //src/tooling/defer:ascii-instr-defer

package(default_visibility = ["//visibility:public"])

# Point to the real defer tool built from source.
alias(
    name = "defer_tool",
    actual = "//src/tooling/defer:ascii-instr-defer",
)
